fix edit button positioning and body padding so edit button doesn't get cut off

--- a/src/styles/display.css
+++ b/src/styles/display.css
@@ -3,7 +3,7 @@
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.178);
     position: absolute;
     top: 0;
-    left: -100px;
+    left: -6rem;
 }
 
 .edu-display {
